--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
@@ -31,6 +32,8 @@
     "eslint-plugin-react-refresh": "^0.4.1",
     "eslint-plugin-unicorn": "^48.0.1",
     "prettier": "^3.0.0",
+    "react-redux": "^8.1.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.0"
   }
