--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/react-redux": "^7.1.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
@@ -34,7 +35,6 @@
     "eslint-plugin-react-refresh": "^0.4.1",
     "eslint-plugin-unicorn": "^48.0.1",
     "prettier": "^3.0.0",
-    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.0"
   }
