--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && npx tailwindcss -i ./src/styles/input.css -o ./dist/output.css",
     "preview": "vite preview",
     "lint": "eslint ./src --report-unused-disable-directives",
     "format": "prettier -w ."
